@@ -4,6 +4,11 @@
 =======================================================
 
 
+Oct 19 2010      plot.f90 cleaned up (no ifort warninf msgs when writing cube data). 
+                 cleanup in writing data and managing arrays in conductor.f90 .
+                 Bug fixed in current.f90 . Cleanup in many parts of the code
+                 according to ifort debugger report. (AF)
+
 Oct 08 2010      test15 added. bug fixed in sumpdos.f90. (AF)
 
 Oct 07 2010      conductor writes kdata also resolved wrt eigenchannels. (AF)
